# Masters

./: .gitignore  CMakeLists.txt  Efficiency.cpp  Hit.h  Li8Analysis.cpp  PadGatedSummedTelescope.h  README.md  TreeMaker.h  eff.cpp  meetingnotes.txt  plots.cpp
beamer/: analyse.tex  into.tex  konklusion.tex  present.aux  present.nav  present.out  present.tex  present.toc  reduktion.tex  setup.tex
cmake/: FindAUSALIB.cmake  FindROOT.cmake
setup/: Dummy.cal  PDummy.cal  matcher.json  old_source.json  setup.json  setupCorrect.json  setup_andreas.json  setup_old.json  setup_pre.json  source.json
setup/ADC_DL_ELOSS/: Det1.cal  Det2.cal  Det3.cal  Det4.cal  DetD.cal  DetU.cal  P3.cal  P4.cal  PU.cal
setup/ADC_PRE/: Det1.cal  Det2.cal  Det3.cal  Det4.cal  DetD.cal  DetU.cal  P2.cal  P3.cal  P4.cal  PD.cal  PU.cal
setup/ADC_feb/: Det1.cal  Det2.cal  Det3.cal  Det4.cal
setup/ADC_old/: Det1.cal  Det2.cal  Det3.cal  Det4.cal  DetD.cal  DetU.cal  P2.cal  PD.cal
setup/Detectors/: AUPAD_1000_3112-14.json  AUPAD_1000_3112-16.json  AUPAD_1500_3289-4.json  AUPAD_1500_3289-5.json  AUPAD_1500_E11.json  AUW1_1000_2541-7.json  AUW1_1000_2947-4.json  AUW1_60_2881-1.json  AUW1_60_2887-4.json  AUW1_60_3187-5.json
setup/cali_ELOSS/: Det1.cal  Det2.cal  Det3.cal  Det4.cal  DetD.cal  DetU.cal  P2.cal  P3.cal  P4.cal  PD.cal  PU.cal
tex/: Analysis.tex  Bachelorproject.tex  Bib.bib  Conclution.tex  DataReduction.tex  ExperimentalMethods.tex  Intro.tex  Speciale.aux  Speciale.bbl  Speciale.blg  Speciale.out  Speciale.tex  Speciale.toc  abstract.tex  ack.tex  titlepage.tex
(+21 files in other folders)
